addition of recipe pages and linking to them

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    
+    <a href="recipes/choc-chip-cookies.html">Choc Chip Cookies</a>
+    <a href="recipes/jam-donuts.html">Jam Donuts</a>
+    <a href="recipes/scones.html">Scones</a>
 </body>
 </html>
